# AgenticProductManager

./: .gitignore  CLAUDE.md  Dockerfile  README.md  env.example  gitignore  groq-model-routing.md  index.html  package-lock.json  package.json  pm-artifact-orchestrator.md  render.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: Dockerfile  Dockerfile.worker  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  deps.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: artifacts.py  exports.py  jobs.py  runs.py
backend/app/db/: client.py  queries.py
backend/app/evaluators/: harness.py  rubric.py
backend/app/graph/: graph.py  state.py
backend/app/graph/nodes/: generate.py  ingest.py  qa.py
backend/app/llm/: client.py  routing.py
backend/app/models/: artifacts.py  exports.py  jobs.py  qa.py  runs.py
backend/app/prompts/: registry.py
backend/app/queue/: jobs.py
backend/app/services/: export_service.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_happy_path.py  test_remediation_path.py
backend/tests/integration/: conftest.py  test_artifacts_api.py  test_exports_api.py  test_jobs_api.py  test_runs_api.py
backend/tests/unit/: test_config.py  test_export_service.py  test_qa_harness.py
backend/worker/: main.py  processor.py
docs/: architecture.md
docs/adr/: 001-langgraph-state-machine.md  002-groq-model-routing.md  003-supabase-auth-and-storage.md
docs/runbooks/: deploy.md  local-dev.md  (+1 more)
supabase/: seed.sql
(+41 files in other folders)
